--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,7 +1,7 @@
 [versions]
-cloud-minecraft = "2.0.0-beta.10"
-paper = "1.21.5-R0.1-SNAPSHOT"
-shadow = "9.0.0-beta17"
+cloud-minecraft = "2.0.0-beta.11"
+paper = "1.21.7-R0.1-SNAPSHOT"
+shadow = "9.0.0-rc1"
 worldguard = "7.0.14"
 
 [libraries]
