Add /scenes set worldedit

--- a/bundlescenes-plugin/src/main/resources/paper-plugin.yml
+++ b/bundlescenes-plugin/src/main/resources/paper-plugin.yml
@@ -4,6 +4,9 @@ version: "${version}"
 api-version: "1.21.8"
 dependencies:
   server:
+    WorldEdit:
+      load: BEFORE
+      required: false
     WorldGuard:
       load: BEFORE
       required: false
