Replace scenes with tags, simplify API, rewrite internals

--- a/bundlescenes-plugin/src/main/resources/paper-plugin.yml
+++ b/bundlescenes-plugin/src/main/resources/paper-plugin.yml
@@ -1,7 +1,8 @@
 name: "BundleScenes"
 main: "gg.bundlegroup.bundlescenes.plugin.Main"
+bootstrapper: "gg.bundlegroup.bundlescenes.plugin.Bootstrap"
 version: "${version}"
-api-version: "1.21.8"
+api-version: "1.21.11"
 dependencies:
   server:
     WorldEdit:
