--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,14 +1,12 @@
 [versions]
-cloud-minecraft = "2.0.0-beta.11"
-paper = "1.21.8-R0.1-SNAPSHOT"
-shadow = "9.0.0-rc1"
-worldedit = "7.3.15"
-worldguard = "7.0.14"
+paper = "1.21.11-R0.1-SNAPSHOT"
+shadow = "9.3.1"
+worldedit = "7.3.18"
+worldguard = "7.0.15"
 
 [libraries]
-cloud-paper = { module = "org.incendo:cloud-paper", version.ref = "cloud-minecraft" }
 paper-api = { module = "io.papermc.paper:paper-api", version.ref = "paper" }
-worldedit-bukkit = { module  = "com.sk89q.worldedit:worldedit-bukkit", version.ref = "worldedit" }
+worldedit-bukkit = { module = "com.sk89q.worldedit:worldedit-bukkit", version.ref = "worldedit" }
 worldguard-bukkit = { module = "com.sk89q.worldguard:worldguard-bukkit", version.ref = "worldguard" }
 
 [plugins]
