--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,9 +1,8 @@
 name: Build
 
 on:
-  push:
-    branches: [ "**" ]
-  pull_request:
+  - push
+  - pull_request
 
 jobs:
   build:
@@ -20,8 +19,30 @@ jobs:
       - name: Build
         run: ./gradlew build
       - name: Publish
+        if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
         run: ./gradlew publish
-        if: github.ref == 'refs/heads/main'
-    env:
-      ORG_GRADLE_PROJECT_bundlegroupUsername: ${{ secrets.BUNDLEGROUP_USERNAME }}
-      ORG_GRADLE_PROJECT_bundlegroupPassword: ${{ secrets.BUNDLEGROUP_PASSWORD }}
+        env:
+          ORG_GRADLE_PROJECT_bundlegroupUsername: ${{ secrets.BUNDLEGROUP_USERNAME }}
+          ORG_GRADLE_PROJECT_bundlegroupPassword: ${{ secrets.BUNDLEGROUP_PASSWORD }}
+      - uses: actions/upload-artifact@v4
+        with:
+          name: Package
+          path: scenes-plugin/build/static/Scenes.jar
+      - name: Update description
+        if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
+        run: ./gradlew modrinthSyncBody syncAllPagesToHangar
+        env:
+          HANGAR_API_TOKEN: ${{ secrets.HANGAR_API_TOKEN }}
+          MODRINTH_TOKEN: ${{ secrets.MODRINTH_TOKEN }}
+      - name: Create release
+        if: ${{ github.event_name == 'push' && github.ref_type == 'tag' }}
+        uses: softprops/action-gh-release@v2
+        with:
+          body_path: CHANGELOG.md
+          files: scenes-plugin/build/static/Scenes.jar
+      - name: Publish release
+        if: ${{ github.event_name == 'push' && github.ref_type == 'tag' }}
+        run: ./gradlew modrinth publishAllPublicationsToHangar
+        env:
+          HANGAR_API_TOKEN: ${{ secrets.HANGAR_API_TOKEN }}
+          MODRINTH_TOKEN: ${{ secrets.MODRINTH_TOKEN }}
